syntax = "proto3";
option java_package = "codes.mydna.analysis_result.lib.grpc";
option java_outer_classname = "AnalysisResultProto";
option java_multiple_files = false;

import "common.proto";

service AnalysisResultService {
  rpc insertAnalysisResult(AnalysisResultInsertionRequest) returns (AnalysisResultInsertionResponse) {};
}

message AnalysisResultInsertionRequest {
  enum ServiceType {
    NORMAL = 0;
    LARGE_SCALE = 1;
  }
  ServiceType serviceType = 1;
  User user = 2;
  AnalysisResult analysisResult = 3;
}

message AnalysisResultInsertionResponse {
  bool isInserted = 1;
  string analysisResultId = 2;
}

message AnalysisResult {
  string status = 1;
  string analysisName = 2;
  int32 totalExecutionTime = 3;
  int32 analysisExecutionTime = 4;

  string dnaId = 5;
  repeated FoundEnzyme foundEnzymes = 6;
  repeated FoundGene foundGenes = 7;
}

message FoundEnzyme {
  string enzymeId = 1;
  repeated EnzymeCut cuts = 2;
}

message FoundGene {
  string geneId = 1;
  repeated GeneOverlap overlaps = 2;
}

message EnzymeCut {
  int32 upperCut = 1;
  int32 lowerCut = 2;
}

message GeneOverlap {
  int32 fromIndex = 1;
  int32 toIndex = 2;
  string orientation = 3;
}